--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:visibility="gone"
+        android:visibility="invisible"
         android:id="@+id/ll2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
